Fix drop down shadows overlapping

--- a/client/src/components/WorldListDropdown.module.scss
+++ b/client/src/components/WorldListDropdown.module.scss
@@ -1,6 +1,6 @@
 .dropdown {
     background-color: white;
-    box-shadow: rgba(60, 64, 67, .3) 0 1px 3px 0, rgba(60, 64, 67, .15) 0 4px 8px 3px;
+    box-shadow: rgba(60, 64, 67, 0.5) 0 1px 3px 0, rgba(60, 64, 67, 0.5) 0 4px 8px 3px;
     color: #3c4043;
     user-select: none;
     -webkit-user-select: none;
@@ -24,8 +24,8 @@
 
 .options {
     background-color: white;
+
     border-radius: 0px 0px 20px 20px;
-    box-shadow: rgba(60, 64, 67, .3) 0 1px 3px 0, rgba(60, 64, 67, .15) 0 4px 8px 3px;
     color: #3c4043;
     user-select: none;
     -webkit-user-select: none;
@@ -37,6 +37,7 @@
     transition: max-height .2s;
 
     &.open {
+        box-shadow: rgba(60, 64, 67, 0.5) 0 1px 3px 0, rgba(60, 64, 67, 0.5) 0 4px 8px 3px;
         max-height: 400px;
     }
 }
